tests/syntax_error/c_or.jou
def foo() -> None:
    if x || y:  # Error: use 'or' instead of '||'
        pass
